<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="double_zero">00</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="sum">+</string>
    <string name="sub">-</string>
    <string name="mul">x</string>
    <string name="div">÷</string>
    <string name="mod">%</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="clear">C</string>
    <string name="allClear">AC</string>
    <string name="invalid_operation">Invalid Operation!</string>
</resources>